--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Carbon Dioxide Calculator</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
+
 <body>
   <main class="container">
     <h1>Carbon Dioxide Calculator</h1>
@@ -36,10 +38,11 @@
     <section id="result" class="card result hidden" aria-live="polite"></section>
 
     <footer>
-      <small>Projeto de teste para aprendizado — sem backend</small>
+      <small>Projeto de teste para aprendizado — com backend em Node.js/Express</small>
     </footer>
   </main>
 
-  <script type="module" src="../js/app.js"></script>
+  <script type="module" src="./src/js/app.js"></script>
 </body>
+
 </html>
